<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/orange"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/teamsLogoView"
        android:contentDescription="@string/teamlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp"
        android:src="@drawable/wnhl_logo" />
    <TextView
        android:id="@+id/notifTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/teamsLogoView"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/notif"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notifText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notifTitle"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/notif_text"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll"
        android:layout_below="@id/notifText"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notifButtonHolder"
            android:orientation="vertical"
            android:padding="20dp"
            >
        </LinearLayout>
    </ScrollView>
</RelativeLayout>