<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/teamBackground"
    tools:context="com.wnhl.wnhl_android.WNHL_Teams">
    <ImageView
        android:contentDescription="@string/teamlogo"
        android:id="@+id/teamLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/teamLogo"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:id="@+id/teamTitle"
        />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teamsScrollView"
            android:layout_below="@id/teamTitle"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/teamsButtonHolder"
            >
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/teamStandings"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:stretchColumns="*"
                android:background="#f1f1f1"
                />
            <TextView
                android:id="@+id/the_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_team"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                />
        <TableLayout
            android:id="@+id/teamTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:stretchColumns="*"
            android:background="#f1f1f1"
            >
            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/games"
                android:paddingTop="5dp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pastGameView"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/teamRecyclerView"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>